tests/baselines/reference/iterableArrayPattern25.errors.txt
iterableArrayPattern25.ts(2,1): error TS2554: Expected 2 arguments, but got 1.


==== iterableArrayPattern25.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) { }
    takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.